# llm-trace

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: protocol.md
examples/: hook.py
include/anomaly/: anomaly_detector.hpp
include/instrumentation/: device_monitor.hpp  mock_tracer.hpp  telemetry_server.hpp
include/storage/: ring_buffer.hpp
include/telemetry/: aggregator.hpp  event_bus.hpp  types.hpp
include/tui/: dashboard.hpp  panels.hpp
include/util/: log.hpp
src/: main.cpp
src/anomaly/: anomaly_detector.cpp
src/instrumentation/: device_monitor.cpp  mock_tracer.cpp  telemetry_server.cpp
src/storage/: ring_buffer.cpp
src/telemetry/: aggregator.cpp  event_bus.cpp
src/tui/: dashboard.cpp  panels.cpp
